src/stylus/how.styl
#how {
	background: url(../images/bg-how.jpg) no-repeat center #0e1226;
	background-size: cover;
	height: 520px;
	position: relative;
	color: #fff;
	box-sizing: border-box;
	padding-top: 60px;
	overflow: hidden;
	text-align: center;

	h2, h4 {
		margin: 0 0 10px;
		font-family: 'Proxima Nova Light';
		font-weight: normal;
	}

	h4 {
		color: #a1b4c6;
	}

	.steps {
		position: relative;
		font-weight: bold;
		margin-top: 50px;
		padding-left: 0;

		li {
			line-height: 25px;
			min-width: 175px;
			position: relative;
			list-style: none;
			padding-top: 175px;
			display: inline-block;
			overflow: visible;
			font-family: 'Proxima Nova Semibold';
			font-size: 20px;
			margin-right: 190px;

			&.how-open {
				background: url(../images/how-open.png) no-repeat top center;
				background-size: auto 157px;
			}

			&.how-subtitles {
				background: url(../images/how-subtitles.png) no-repeat top center;
				background-size: auto 157px;
			}

			&.how-play {
				background: url(../images/how-play.png) no-repeat top center;
				background-size: auto 157px;
			}

			&:last-child {
				margin: 0;
			}
		}
	}
}

